--- a/src/styles/BibleVerses.css
+++ b/src/styles/BibleVerses.css
@@ -1,18 +1,18 @@
 /* BibleVerses.css */
 .bible-verses {
-    background-color: #ffffff; /* White */
-    color: #333333; /* Dark Gray */
+    background-color: #ffffff;
+    color: #333333;
     padding: 20px;
-    border-radius: 12px; /* More rounded corners */
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); /* Softer shadow for depth */
+    border-radius: 12px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
   }
   
   .bible-verses h4 {
-    color: #007BFF; /* Primary color */
+    color: #007BFF;
     margin-bottom: 10px;
   }
   
   .bible-verses p {
-    margin-bottom: 15px; /* Space between verses */
+    margin-bottom: 15px;
   }
   
